--- a/pages/historia.html
+++ b/pages/historia.html
@@ -48,6 +48,15 @@
            
            </li>
 
+           <li>
+            <a href="reflexiones.html" class="boton boton-1">
+                <svg>
+                <rect x="0" y="0"  width="100%" height="100%"/>
+                </svg>
+                Reflexiones
+            </a>
+           </li>
+
              </ul>
         </div>
     </div>
