--- a/pages/reflexiones.html
+++ b/pages/reflexiones.html
@@ -86,14 +86,14 @@
         <span> REFLEXIONES</span>
         <p> 
             "Me estoy yendo de tu vida aun amandote con toda mi alma, 
-            M eestoy yendo de tu vida porque la mujer de la cual me enamore, ya no existe en su interior."
+            Me estoy yendo de tu vida porque la mujer de la cual me enamoré, ya no existe en su interior."
         </p>
 
         <p> 
             "Como no estas experimentado en las cosas del mundo, todas las 
             cosas que tienen algo de dificultad, te parecen imposibles, 
             confia en el tiempo que suele dar dulces salidas a muchas amargas dificultades.
-            ¡te estare esperando!"
+            ¡TE ESTAÉ ESPERANDO!"
         </p>
 
 
