--- a/pages/reflexiones.html
+++ b/pages/reflexiones.html
@@ -93,7 +93,7 @@
             "Como no estas experimentado en las cosas del mundo, todas las 
             cosas que tienen algo de dificultad, te parecen imposibles, 
             confia en el tiempo que suele dar dulces salidas a muchas amargas dificultades.
-            ¡TE ESTAÉ ESPERANDO!"
+            ¡TE ESTARÉ ESPERANDO!"
         </p>
 
 
