--- a/pages/reflexiones.html
+++ b/pages/reflexiones.html
@@ -85,7 +85,7 @@
         <div>
         <span> REFLEXIONES</span>
         <p> 
-            "Me estoy yendo de tu vida aun amandote con toda mi alma, 
+            "Me estoy yendo de tu vida aun amandote con toda mi alma, no ve voy porque talvés ya no sientas lo mismo por mí.
             Me estoy yendo de tu vida porque la mujer de la cual me enamoré, ya no existe en su interior."
         </p>
 
