--- a/pages/reflexiones.html
+++ b/pages/reflexiones.html
@@ -86,7 +86,7 @@
         <span> REFLEXIONES</span>
         <p> 
             "Me estoy yendo de tu vida aun amandote con toda mi alma, no ve voy porque talvés ya no sientas lo mismo por mí.
-            Me estoy yendo de tu vida porque la mujer de la cual me enamoré, ya no existe en su interior."
+             Me estoy yendo de tu vida porque la mujer de la cual me enamoré, ya no existe en su interior, pero mi corazón me grita que volerás. TE ESTARÉ ESPERANDO!"
         </p>
 
         <p> 
