--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     style="will-change: transform, opacity; animation-duration: 1500ms;">
             </div>
             <div class="principaldiv2">
-                    <img class="circular2" src="images/foto ok.jpg" 
+                    <img class="circular2" src="images/IMG9.jpg" 
                         alt="" 
                         style="will-change: transform, opacity; animation-duration: 1500ms;">
             </div>
